# MySimsModLoader

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  GenerateVersion.cmake  README.md
.github/workflows/: cmake-single-platform.yml
basemod/: mod.xml
basemod/assets/: fallback.dds  fallback.material.xml  fallback.materialset  fallback.windowsmodel  missing_texture.dds
basemod/lua/: ea.lua  hooks.lua  pre_system.lua
examples/greener-grass/: mod.xml
examples/greener-grass/assets/: 0x00000000!0x000000000B25E40B.dds  0x00000000!0x00000000EE93FAC8.dds
examples/greener-grass/lua/: playerhook.lua
libs/eastl/include/EASTL/: hash_map.h
libs/eastl/include/EASTL/internal/: config.h
libs/imgui-cmake/: CMakeLists.txt
src/: Common.h  Config.h  Main.cpp  Version.h.in  dsound.h
src/EA/: GraphicDevice.h
src/EA/IO/: Constants.h  File.cpp  File.h  FileStream.cpp  FileStream.h  IStream.h  MemoryStream.cpp  MemoryStream.h  SubFileStream.cpp  SubFileStream.h
src/EA/ResourceMan/: IDatabase.h  IRecord.h  IResource.h  KeyFilter.h  RecordInfo.h  ResourceKey.cpp  ResourceKey.h
src/assets/: Asset.cpp  Asset.h  Assets.cpp  Assets.h
src/core/assets/: Asset.cpp  Asset.h  Assets.cpp  Assets.h
src/core/debug/: DebugUI.cpp  DebugUI.h  ImGuiHook.cpp  ImGuiHook.h
src/core/debug/windows/: AssetWindow.h  HexWindow.h  LuaWindow.h
src/core/hash/: FNV.cpp  FNV.h
src/core/hooks/: ArgscriptHook.cpp  ArgscriptHook.h  Config.h  Hooks.cpp  Hooks.h  LuaHook.cpp  LuaHook.h
src/core/modloader/: Mod.cpp  Mod.h  ModLoader.cpp  ModLoader.h  Mods.cpp  Mods.h
src/core/resource/: CustomDatabase.cpp  CustomDatabase.h  CustomRecord.cpp  CustomRecord.h  IdResolver.cpp  IdResolver.h
src/core/signatures/: Signatures.cpp  Signatures.h  sigdef.h  signatures.txt
src/core/system/: Console.cpp  Console.h  CrashHandler.cpp  CrashHandler.h  Logger.cpp  Logger.h
src/core/util/: StreamUtil.cpp  StreamUtil.h
src/formats/: BinaryReader.cpp  BinaryReader.h  CharacterDef.cpp  CharacterDef.h  ObjectDef.cpp  ObjectDef.h  ResourceKey.h
src/formats/builders/: MaterialBuilder.cpp  MaterialBuilder.h  MaterialSetBuilder.cpp  MaterialSetBuilder.h
src/formats/materials/: Material.cpp  Material.h  MaterialParameter.cpp  MaterialParameter.h  MaterialParameterType.h  MaterialSet.cpp  MaterialSet.h
src/formats/primitives/: Vector2.h  Vector3.h  Vector4.h
src/formats/xml/: CharacterDef.cpp  CharacterDef.h  GameObjectDef.h  GameObjectListHolder.h  ObjectDef.cpp  World.cpp  World.h
src/hashes/: Hashes.cpp  Hashes.h
src/hooks/: Hooks.cpp  Hooks.h  LuaHook.cpp  LuaHook.h
src/include/: lua.h  refpack.h
src/modloader/: ModLoader.cpp  ModLoader.h
src/mods/: Mod.cpp  Mod.h  Mods.cpp  Mods.h
src/platform/w32/: dsound.def  dsound.h
src/platform/w64/: wsock.h
src/signatures/: Signatures.cpp  Signatures.h  lua.h  sigdef.h
src/tweakers/: Tweaker.cpp  Tweaker.h  Tweakers.cpp  Tweakers.h
src/tweakers/Clothing/: ClothingTweaker.cpp  ClothingTweaker.h  SkintoneVariantGenerator.cpp  SkintoneVariantGenerator.h
src/tweakers/Material/: MaterialTweaker.cpp  MaterialTweaker.h
src/tweakers/Swarm/: SwarmTweaker.cpp  SwarmTweaker.h
src/tweakers/SwarmTweaker/: SwarmTweaker.cpp  SwarmTweaker.h
src/util/: Console.cpp  Console.h  FNV.cpp  FNV.h  File.cpp  File.h  Logger.cpp  Logger.h
tests/: CharacterDefTest.cpp  MaterialSetTest.cpp  MaterialTest.cpp  ObjectDefTest.cpp  serialization.cpp
tests/assets/: 0x4d114292!0x000000007dea5de1.Material  0xdd91919d!0x00000000db272b16.MaterialSet
